[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Gameplay.gd" type="Script" id=1]
[ext_resource path="res://Sprites/main_tileset.png" type="Texture" id=2]
[ext_resource path="res://Levels/Level00.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/LevelFinishedUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/PauseMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Audio/level_finish.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/select_00.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/select_01.wav" type="AudioStream" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="TileSet" id=6]
0/name = "main_tileset.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "main_tileset.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 8, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "main_tileset.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 16, 0, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "main_tileset.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 8, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "main_tileset.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 8, 8, 8, 8 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0

[node name="Gameplay" type="Node2D"]
script = ExtResource( 1 )

[node name="OldTilemap" type="TileMap" parent="."]
position = Vector2( 0, 80 )
tile_set = SubResource( 6 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 8
format = 1
tile_data = PoolIntArray( 0, -1073741824, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 0, 0, 65536, -1610612735, 0, 65551, -1610612735, 0, 131072, -1610612735, 0, 131087, -1610612735, 0, 196608, -1610612735, 0, 196623, -1610612735, 0, 262144, -1610612735, 0, 262159, -1610612735, 0, 327680, -1610612735, 0, 327695, -1610612735, 0, 393216, -1610612735, 0, 393231, -1610612735, 0, 458752, 0, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, -1073741824, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="LevelRoot" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Level00" parent="LevelRoot" instance=ExtResource( 3 )]

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 15

[node name="HeaderContainer" type="CenterContainer" parent="UI"]
margin_top = 2.0
margin_right = 64.0
margin_bottom = 8.0

[node name="Label" type="Label" parent="UI/HeaderContainer"]
margin_left = 18.0
margin_right = 46.0
margin_bottom = 5.0
custom_fonts/font = ExtResource( 4 )
text = "Level 1"

[node name="LevelFinishedUI" parent="UI" instance=ExtResource( 5 )]
visible = false

[node name="PauseMenu" parent="UI" instance=ExtResource( 6 )]
visible = false

[node name="MovesContainer" type="CenterContainer" parent="UI"]
margin_top = 57.0
margin_right = 64.0
margin_bottom = 62.0

[node name="MovesLabel" type="Label" parent="UI/MovesContainer"]
margin_left = 16.0
margin_right = 48.0
margin_bottom = 5.0
custom_fonts/font = ExtResource( 4 )
text = "Moves: 0"

[node name="LevelFinished" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="UIMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="UISelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
